--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -1,4 +1,4 @@
-.scroll-img { background-image: url('../../assets/scroll-img.jpg'); background-position: center; background-repeat: no-repeat; background-size: cover; background-attachment: scroll; height: 400px; margin-left: -15px; margin-right: -15px;}
+.scroll-img { background-image: url('../../assets/scroll-img.jpg'); background-position: center; background-repeat: no-repeat; background-size: cover; background-attachment: scroll; height: 400px; width: 100%; }
 .scroll-img-info-box { background-color: rgba(0,0,0,0.8); padding: 27px; border-radius: 6px; }
 .scroll-img-info-box h1 { color: #fb6361; margin-top: -10px; padding-bottom: 9px; }
 .scroll-img-info-box p { color: #fff; padding-bottom: 9px; }
@@ -6,12 +6,16 @@
 .learn-more-a:hover { color: #fff; }
 .learn-more-btn { background-color: rgba(0,0,0,0); border: 2px solid #f90; border-radius: 2px; padding: 0.5em 1em; }
 .learn-more-btn:hover { background-color: #f90; transition: 0.6s; }
-.scroll-img-row { padding-top: 40px; }
+.scroll-img-row { padding-top: 40px; margin-left: 0px; margin-right: 0px; }
 .btn-text { font-size: 14px; }
 .bg-1 { background-color: #262626; min-height: 340px; color: #fff; text-align: center; padding-bottom: 26px; padding-top: 21px; padding-left: 40px; padding-right: 40px; }
 .bg-1 h3 { margin-top: 30px; }
 .bg-1 img { margin-left: auto; margin-right: auto;}
+.bg-1 .learn-more-btn { margin-top: 10px; }
 .bg-2 { background-color: #000000; min-height: 340px; color: #fff; text-align: center; padding-bottom: 26px; padding-top: 21px; }
 .bg-2 img { margin-left: auto; margin-right: auto;}
 .bg-2 h3 { margin-top: 30px;}
-.scrolling-text { text-align: center; height: 308px; padding-top: 50px; background-color: #fff; margin-left: -15px; margin-right: -15px; padding-left: 300px; padding-right: 300px; }
+.bg-2 .learn-more-btn { margin-top: 10px; }
+.scrolling-text { text-align: center; height: 308px; padding-top: 50px; background-color: #fff; padding-left: 300px; padding-right: 300px; }
+.scrolling-text h1 { margin-top: 45px; color: #fb6361; }
+.animal-row { margin-left: 0px; margin-right: 0px;}
